2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (FILES): Move AssemblyInfo.cs ...
	(GENERATED_FILES): ... here.

2005-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* DockToolbars/*: Docking toolbars!
	
	* Commands/Command.cs: Command should be abstract.
	* Commands/CommandToolbar.cs: This now is a dockable toolbar.
	* Commands/CommandManager.cs: Register commands from CommandSystemCommands.
	* Commands/CommandFrame.cs: A frame to use as main container for windows
	that use commands in dockable toolbars.
	* Commands/CommandSystemCommands.cs: Some configuration commands.

2005-06-01  John Luke  <john.luke@gmail.com>

	* Makefile.am: remove Dock/*
	* Dock: removed
	* */*.cs: remove GtkSharp and similar references

2005-06-01  John Luke  <john.luke@gmail.com>

	* Makefile.am: no longer using gnome-vfs in here
	* FileBrowser/FileBrowser.cs: remove vfs remnents

2005-06-01  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: adjust to FileIconLoader
	change

2005-05-30  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/CommandToolButton.cs: Only update button properties if
	they have really changed.
	* Commands/CommandManager.cs: Report errors using a new CommandError
	event.
	* Commands/CommandErrorHandler.cs: New delegate and event args for the
	CommandError event.

2005-05-15  Lluis Sanchez Gual  <lluis@novell.com>

	* FileBrowser/FileBrowser.cs: Catch UnauthorizedAccessException errors.
	* IconView/IconView.cs: Add a shadow to the icon view.
	* TabLabel/TabLabel.cs: Added IntPtr constructor to make gtk# happy.

2005-05-08  John Luke  <john.luke@gmail.com>

	* Tree/TreeView.cs: use DefaultSortFunc property instead
	* DataGrid/DataGrid.cs: use ColumnTypes property instead
	
2005-05-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/CommandManager.cs: Catch and report exceptions thrown
	while dispatching commands.

2005-05-04  Alp Toker  <alp@atoker.com>

	* Commands/CommandToolButton.cs: enable UseUnderline. The Gtk+ docs