@@ -59,6 +59,11 @@ namespace MonoDevelop.Commands
 				Gtk.Widget child = (Gtk.Widget) Activator.CreateInstance (((CustomCommand)cmd).WidgetType);
 				Gtk.ToolItem ti = new Gtk.ToolItem ();
 				ti.Child = child;
+				if (cmd.Text != null && cmd.Text.Length > 0) {
+					Gtk.Tooltips tips = new Gtk.Tooltips ();
+					ti.SetTooltip (tips, cmd.Text, cmd.Text);
+					tips.Enable ();
+				}
 				return ti;
 			}
 			
