@@ -1,3 +1,11 @@
+2005-07-11  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Commands/ICommandDelegatorRouter.cs: New command routing interface.
+	* Commands/CommandRouterContainer: An implementation of
+	ICommandDelegatorRouter.
+	* Commands/CommandManager.cs: Implemented support for
+	ICommandDelegatorRouter.
+
 2005-06-28  Raja R Harinath  <rharinath@novell.com>
 
 	* Makefile.am (FILES): Move AssemblyInfo.cs ...
